examples/invalid/projects/bad_links_missing_data_use/main.ns
use shader SurfaceShader;

mod cpu Main {
  fn main() {
    print(1);
  }
}
